refactoring ファイル構造を修正、不要なライブラリを削除

--- a/mdx-with-nextjs/contents/snippets/change-display-name-temporary.mdx
+++ b/mdx-with-nextjs/contents/snippets/change-display-name-temporary.mdx
@@ -13,4 +13,4 @@ $ export PS1='$ '
 
 $を任意の文字に変えて使うこともできます。
 
-<Image src={"/snippets/change-display-name-temporary/1.png"} width={506} height={136} />
+<img alt="test!!!" src="../image/change-display-name-temporary/1.png" width="506" height="136" />
