--- a/mdx-with-nextjs/contents/snippets/output-color-message.mdx
+++ b/mdx-with-nextjs/contents/snippets/output-color-message.mdx
@@ -15,4 +15,4 @@ $ printf '\e[1;36m this is light blue message'
 $ printf '\e[1;37m this is gray message'
 ```
 
-![sample](./image/output-color-message/1.png)
+<img alt="test!!!" src="../image/output-color-message/1.png" width="445" height="255" />
